BB-6003: FrontStore > Catalog > It appears horizontal scrolling in grid - fixed horizontal scroll on no-image view catalog

--- a/src/Oro/Bundle/FrontendBundle/Resources/public/default/scss/_legacy/products-widget.scss
+++ b/src/Oro/Bundle/FrontendBundle/Resources/public/default/scss/_legacy/products-widget.scss
@@ -39,7 +39,12 @@
     }
 
     &_no-image-view {
-      margin-top: 15px !important;
+      margin-top: 15px;
+
+      @media (max-width: $screen-md) {
+        overflow: hidden;
+      }
+
     }
   }
 
